[gd_scene load_steps=2 format=3 uid="uid://c11388bgifufm"]

[ext_resource type="Script" path="res://scenes/ui/damage_number/damage_number.gd" id="1_2qwwu"]

[node name="DamageNumber" type="Control"]
z_index = 5
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_2qwwu")

[node name="NumberLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 11.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LiveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
